tests/ui/imports/issue-8208.stderr
error[E0432]: unresolved import `self::*`
  --> $DIR/issue-8208.rs:1:5
   |
LL | use self::*;
   |     ^^^^^^^ cannot glob-import a module into itself

error[E0432]: unresolved import `foo::*`
  --> $DIR/issue-8208.rs:5:9
   |
LL |     use foo::*;
   |         ^^^^^^ cannot glob-import a module into itself

error[E0432]: unresolved import `super::bar::*`
  --> $DIR/issue-8208.rs:9:13
   |
LL |         use super::bar::*;
   |             ^^^^^^^^^^^^^ cannot glob-import a module into itself

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0432`.
